Basic recursion, factorial of input, getting input from client and printing result in html page.

--- a/day-1/index.html
+++ b/day-1/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First Day: Recursion</title>
 </head>
 <body>
-    
+    <h1>First Day: Recursion</h1>
+    <input type="number" name="input" id="input">
+    <br>
+    <button onclick="result(document.getElementById('input').value)">Get factorial</button>
+    <br>
+    <h2>Result:</h2>
+    <div id="result"></div>
+    <script src="index.js"></script>
 </body>
 </html>
