--- a/day-2/index.html
+++ b/day-2/index.html
@@ -7,6 +7,8 @@
     <title>Second Day</title>
 </head>
 <body>
+    <h1>Second Day</h1>
+    <button onclick="printPage()">Print connect of page</button>
     <script src="index.js"></script>
 </body>
 </html>
